--- a/fullstack_template/static/package.json
+++ b/fullstack_template/static/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^4.8.2"
+    "webpack": "^4.8.2",
+    "webpack-cli": "^2.1.3"
   }
 }
